--- a/Proposal/references.bib
+++ b/Proposal/references.bib
@@ -235,3 +235,35 @@ doi = {10.1049/ip-rsn:20045017}
   keywords={Bistatic radar;Bandwidth;Digital audio broadcasting;Radar detection;Radar antennas;Resonator filters;Interference;Transmitters;Signal design;Passive radar},
   doi={10.1109/RADAR.2007.374302}}
 
+@article{DVBsignal,
+author = {Edrich, Michael and Schroeder, Alexander and Meyer, Fabienne},
+title = {Design and performance evaluation of a mature FM/DAB/DVB-T multi-illuminator passive radar system},
+journal = {IET Radar, Sonar \& Navigation},
+volume = {8},
+number = {2},
+pages = {114-122},
+year = {2014}
+}
+
+@INPROCEEDINGS{DVBnoise,
+  author={Yin, Ying and Zhang, Shunsheng and Wu, Fuxia and Zong, Zhulin and Zhang, Wei},
+  booktitle={2016 CIE International Conference on Radar (RADAR)}, 
+  title={Passive radar detection with DVB-T signals}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={1-5},
+  keywords={Passive radar;OFDM;Object detection;Wideband;Correlation;Transforms;Passive Radar;Target Detection;Wideband Synthetic;Radon-Fourier Transform},
+  doi={10.1109/RADAR.2016.8059601}}
+
+@inproceedings{SDRhardware,
+author = {Calvo-Palomino, Roberto and Ricciato, Fabio and Giustiniano, Domenico and Lenders, Vincent},
+year = {2017},
+month = {10},
+pages = {51-58},
+title = {LTESS-track: A Precise and Fast Frequency Offset Estimation for low-cost SDR Platforms},
+doi = {10.1145/3131473.3131481}
+}
+
+
+
