--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -29,7 +29,7 @@
         
         \vspace{2.5cm}
         
-        \textbf{\Large{DRAFT PROJECT PROPOSAL}}
+        \textbf{\Large{REIT4841 THESIS  PROJECT PROPOSAL}}
         
         \vspace{0.5cm}
 
@@ -456,7 +456,7 @@ Given the technical nature of the project, which strictly involves the use of ra
 % References (You will need to use BibTeX to manage your references)
 % The bibliography style can be changed to suit your needs
 \newpage
-\section*{References} %HOW TO REMOVE DOUBLE?
+\addcontentsline{toc}{section}{References} % Adds "References" to your TOC
 \bibliographystyle{plain}
 \bibliography{references}
 
